Encountered max connections to DB

--- a/src/views/create/CreateAccountPage.html
+++ b/src/views/create/CreateAccountPage.html
@@ -63,7 +63,7 @@
 <body class="login-img3-body">
   <div class="container">
     <br></br>
-    <form method="POST" class="login-form" action="/createAcc">
+    <form method="POST" class="login-form" action="/createaccount/createAcc">
       <div class="login-wrap">
         <div>
           <p><b>Account Information</p>
