--- a/src/views/create/CreateProfile.html
+++ b/src/views/create/CreateProfile.html
@@ -208,29 +208,29 @@
                   <section class="panel">
                     <div class="panel-body bio-graph-info">
                       <h1> Profile Info</h1>
-                      <form method="POST" class="form-horizontal" role="form" action="/createP">
+                      <form method="POST" class="form-horizontal" role="form" action="/createprofile/createP">
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Name</label>
                           <div class="col-lg-6">
-                            <input type="text" class="form-control" id="name" name="Name" placeholder=" ">
+                            <input type="text" class="form-control" name="Name" placeholder=" ">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-2 control-label">About Me</label>
                           <div class="col-lg-10">
-                            <textarea name="Description" id="abt_me" class="form-control" cols="30" rows="5"></textarea>
+                            <textarea name="Description"  class="form-control" cols="30" rows="5"></textarea>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Age</label>
                           <div class="col-lg-6">
-                            <input type="number" class="form-control" min="0" max="3" id="b-day" name="Age" placeholder=" ">
+                            <input type="text" class="form-control"   name="Age" placeholder=" ">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Country</label>
                           <div class="col-lg-6">
-                            <input type="text" class="form-control" id="country" name="Country" placeholder=" ">
+                            <input type="text" class="form-control"  name="Country" placeholder=" ">
                           </div>
                         </div>
                         <div class="form-group">
