--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -498,7 +498,7 @@
                                   <div class="col-lg-offset-2 col-lg-10">
                                     <button type="submit" class="btn btn-primary">Save</button>
                                     <button type="reset" class="btn btn-danger">Cancel</button>
-                                    <button type="reset" name="deleteaccount" value="true" class="btn btn-danger">Delete Account</button>
+                                    <button type="submit" name="deleteaccount"  class="btn btn-danger">Delete Account</button>
                                   </div>
                                 </div>
                               </form>
