--- a/src/views/create/CreateEventPage.html
+++ b/src/views/create/CreateEventPage.html
@@ -212,7 +212,7 @@
                       Event Page Form
                     </header>
                     <div class="panel-body">
-                      <form method="POST" action="/createEv" class="form-horizontal " method="get">
+                      <form method="POST" action="/createevent/createEv" class="form-horizontal " method="get">
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Name</label>
                           <div class="col-sm-10">
@@ -222,7 +222,7 @@
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Administrator</label>
                           <div class="col-sm-10">
-                            <p class="form-control-static">john.doe@upr.edu</p>
+                            <p class="form-control-static"><%= admin_name %></p>
                           </div>
                         </div>
                         <div class="form-group">
@@ -265,7 +265,7 @@
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Administrator Email</label>
                           <div class="col-lg-10">
-                            <p class="form-control-static">john.doe@upr.edu</p>
+                            <p class="form-control-static"><%= admin_email %></p>
                           </div>
                         </div>
 
