--- a/src/views/page/ProjectPage.html
+++ b/src/views/page/ProjectPage.html
@@ -1,66 +1,66 @@
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>PIPS</title>
-        <!-- Bootstrap Core CSS -->
-        <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-        <!-- bootstrap theme -->
-        <link href="/css/bootstrap-theme.css" rel="stylesheet"/>
-        <!-- Custom CSS -->
-        <link href="/css/shop-item.css" rel="stylesheet"/>
-        <!--external css-->
-        <!-- font icon -->
-        <link href="/css/elegant-icons-style.css" rel="stylesheet" />
-        <link href="/css/font-awesome.min.css" rel="stylesheet" />
-        <!-- Custom styles -->
-        <link href="/css/style.css" rel="stylesheet"/>
-        <link href="/css/style-responsive.css" rel="stylesheet" />
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
-        <!--[if lt IE 9]>
+
+<head>
+  <meta charset="utf-8" />
+  <title>PIPS</title>
+  <!-- Bootstrap Core CSS -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- bootstrap theme -->
+  <link href="/css/bootstrap-theme.css" rel="stylesheet" />
+  <!-- Custom CSS -->
+  <link href="/css/shop-item.css" rel="stylesheet" />
+  <!--external css-->
+  <!-- font icon -->
+  <link href="/css/elegant-icons-style.css" rel="stylesheet" />
+  <link href="/css/font-awesome.min.css" rel="stylesheet" />
+  <!-- Custom styles -->
+  <link href="/css/style.css" rel="stylesheet" />
+  <link href="/css/style-responsive.css" rel="stylesheet" />
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+  <!--[if lt IE 9]>
         <!--AngularJS-->
-        <script src="/js/angular.min.js"></script>
+  <script src="/js/angular.min.js"></script>
 
-        <script src="/js/html5shiv.js"></script>
-        <script src="/respond.min.js"></script>
-        <script src="/js/lte-ie7.js"></script>
-        
-        <!-- Fix NavBar -->
-        <link rel="stylesheet" href="/css/navbarfix.css"/>
-        <!-- ck editor -->
-        <script src="/src/assets/ckeditor/ckeditor.js"></script>
-        <!-- javascripts -->
-        <script src="/js/jquery.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <!-- nice scroll -->
-        <script src="/js/jquery.scrollTo.min.js"></script>
-        <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
+  <script src="/js/html5shiv.js"></script>
+  <script src="/respond.min.js"></script>
+  <script src="/js/lte-ie7.js"></script>
 
-        <!-- jquery ui -->
-        <script src="/js/jquery-ui-1.9.2.custom.min.js"></script>
-        <!--custom checkbox & radio-->
-        <script type="text/javascript" src="js/ga.js"></script>
-        <!--custom switch-->
-        <script src="/js/bootstrap-switch.js"></script>
-        <!--custom tagsinput-->
-        <script src="/js/jquery.tagsinput.js"></script>
+  <!-- Fix NavBar -->
+  <link rel="stylesheet" href="/css/navbarfix.css" />
+  <!-- ck editor -->
+  <script src="/src/assets/ckeditor/ckeditor.js"></script>
+  <!-- javascripts -->
+  <script src="/js/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <!-- nice scroll -->
+  <script src="/js/jquery.scrollTo.min.js"></script>
+  <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
 
-        <!-- bootstrap-wysiwyg -->
-        <script src="/js/jquery.hotkeys.js"></script>
-        <script src="/js/bootstrap-wysiwyg.js"></script>
-        <script src="/js/bootstrap-wysiwyg-custom.js"></script>
-        <!-- ck editor -->
-        <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-        <!-- custom form component script for this page-->
-        <script src="/js/form-component.js"></script>
-        <!-- custome script for all page -->
-        <script src="/js/scripts.js"></script>
-    </head>
+  <!-- jquery ui -->
+  <script src="/js/jquery-ui-1.9.2.custom.min.js"></script>
+  <!--custom checkbox & radio-->
+  <script type="text/javascript" src="js/ga.js"></script>
+  <!--custom switch-->
+  <script src="/js/bootstrap-switch.js"></script>
+  <!--custom tagsinput-->
+  <script src="/js/jquery.tagsinput.js"></script>
 
-    <body>
+  <!-- bootstrap-wysiwyg -->
+  <script src="/js/jquery.hotkeys.js"></script>
+  <script src="/js/bootstrap-wysiwyg.js"></script>
+  <script src="/js/bootstrap-wysiwyg-custom.js"></script>
+  <!-- ck editor -->
+  <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+  <!-- custom form component script for this page-->
+  <script src="/js/form-component.js"></script>
+  <!-- custome script for all page -->
+  <script src="/js/scripts.js"></script>
+</head>
 
-   <!-- Navigation -->
+<body>
+
+  <!-- Navigation -->
   <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -101,83 +101,83 @@
           <li>
             <a href="/submitsuggestion"><i class="fa fa-envelope"></i> Contact PIPS</a>
           </li>
-         </ul>
-         <div style="float:right">
-         <ul class="nav navbar-nav">
-          <!-- user login dropdown start-->
-          <li class="dropdown pull-right">
-            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-              <span class="profile-ava">
+        </ul>
+        <div style="float:right">
+          <ul class="nav navbar-nav">
+            <!-- user login dropdown start-->
+            <li class="dropdown pull-right">
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                <span class="profile-ava">
                     <img alt="" src="img/avatar1_small.jpg">
               </span>
-              <span class="username">Jenifer Smith</span>
-              <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu extended logout">
-              <div class="log-arrow-up"></div>
-              <li>
-                <a href="#"><i class="icon_clock_alt"></i> Account Settings</a>
-              </li>
-              <li>
-                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
-              </li>
+                <span class="username">Jenifer Smith</span>
+                <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu extended logout">
+                <div class="log-arrow-up"></div>
+                <li>
+                  <a href="#"><i class="icon_clock_alt"></i> Account Settings</a>
+                </li>
+                <li>
+                  <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                </li>
 
-            </ul>
-          </li>
-          <!-- alert notification start-->
-          <li id="alert_notificatoin_bar" class="dropdown pull-right">
-            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-              <i class="icon-bell-l"></i>
-              <span class="badge bg-important">7</span>
-            </a>
-            <ul class="dropdown-menu extended notification">
-              <div class="notify-arrow notify-arrow-blue"></div>
-              <li>
-                <p class="blue">You have 4 new notifications</p>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="label label-primary"><i class="icon_profile"></i></span> Friend Request
-                  <span class="small italic pull-right">5 mins</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="label label-warning"><i class="icon_pin"></i></span> John location.
-                  <span class="small italic pull-right">50 mins</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="label label-danger"><i class="icon_book_alt"></i></span> Project 3 Completed.
-                  <span class="small italic pull-right">1 hr</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="label label-success"><i class="icon_like"></i></span> Mick appreciated your work.
-                  <span class="small italic pull-right"> Today</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">See all notifications</a>
-              </li>
-            </ul>
-          </li>
-          <!-- alert notification end-->
+              </ul>
+            </li>
+            <!-- alert notification start-->
+            <li id="alert_notificatoin_bar" class="dropdown pull-right">
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                <i class="icon-bell-l"></i>
+                <span class="badge bg-important">7</span>
+              </a>
+              <ul class="dropdown-menu extended notification">
+                <div class="notify-arrow notify-arrow-blue"></div>
+                <li>
+                  <p class="blue">You have 4 new notifications</p>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="label label-primary"><i class="icon_profile"></i></span> Friend Request
+                    <span class="small italic pull-right">5 mins</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="label label-warning"><i class="icon_pin"></i></span> John location.
+                    <span class="small italic pull-right">50 mins</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="label label-danger"><i class="icon_book_alt"></i></span> Project 3 Completed.
+                    <span class="small italic pull-right">1 hr</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="label label-success"><i class="icon_like"></i></span> Mick appreciated your work.
+                    <span class="small italic pull-right"> Today</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">See all notifications</a>
+                </li>
+              </ul>
+            </li>
+            <!-- alert notification end-->
 
-          <li class="pull-left" style="vertical-align: top; display: table-cell; margin: 13px;">
-            <div id="search">
-              <a href="" class="glyphicon glyphicon-search " style="font-size: 25px;"></a>
-            </div>
-          </li>
-          <li class="pull-left" style="vertical-align: middle; display: table-cell; margin: 10px;">
-            <div>
-              <input class="form-control" type="text" id="lg">
-            </div>
-          </li>
+            <li class="pull-left" style="vertical-align: top; display: table-cell; margin: 13px;">
+              <div id="search">
+                <a href="" class="glyphicon glyphicon-search " style="font-size: 25px;"></a>
+              </div>
+            </li>
+            <li class="pull-left" style="vertical-align: middle; display: table-cell; margin: 10px;">
+              <div>
+                <input class="form-control" type="text" id="lg">
+              </div>
+            </li>
 
-        </ul>
+          </ul>
         </div>
       </div>
       <!-- notificatoin dropdown end-->
@@ -220,10 +220,11 @@
                         <br></br>
                         <button type="submit" class="btn btn-primary btn pull-right">Follow Project</button>
                       </div>
-                       <div class="col-lg-12">
+                      <div class="col-lg-12">
                         <ul>
                           <li class="active pull-center">
-                            <p class="">Project Progress</p><hr>
+                            <p class="">Project Progress</p>
+                            <hr>
                             <div class="progress">
                               <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
                               style="width:50%"><span><b>50% Complete</b></span>
@@ -515,8 +516,9 @@
           </div>
     </main>
     <!--main content end-->
-    </div>
-    <!-- container section end -->
+          </div>
+          <!-- container section end -->
 
 </body>
+
 </html>
