--- a/src/views/submit/SubmitSuggestions.html
+++ b/src/views/submit/SubmitSuggestions.html
@@ -205,15 +205,13 @@
                   </ol>
                 </div>
               </div>
-              <!-- CKEditor -->
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
                     <header class="panel-heading">Your Suggestions</header>
-
                     <div class="panel-body">
                       <div class="form">
-                        <form action="#" class="form-horizontal">
+                        <form method="POST" action="/submitsuggestion/sendE" class="form-horizontal">
                           <div class="form-group">
                             <div class="col-sm-9">
                               <p>Thank you for taking the time to send us your feedback or share suggestions regarding PIPS,
@@ -223,19 +221,19 @@
                           <div class="form-group pull-left">
                             <label class="col-sm-2 control-label ">From:</label>
                             <div class="col-sm-10">
-                              <p class="form-control-static ">john.doe@upr.edu</p>
+                              <p class="form-control-static "><%= user_email %></p>
                             </div>
                           </div>
                           <div class="form-group">
                             <div class="col-lg-12">
-                              <textarea class="form-control ckeditor" name="editor1" rows="10" cols="50"></textarea>
+                              <textarea name="EBody" class="form-control ckeditor" name="editor1" rows="10" cols="50"></textarea>
                             </div>
                           </div>
+                          <br/>
+                          <div class="pull-right">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                          </div>
                         </form>
-                      </div>
-                      <br/>
-                      <div class="pull-right">
-                        <button type="submit" class="btn btn-primary">Submit</button>
                       </div>
                     </div>
                   </section>
