--- a/src/views/create/CreateEventPage.html
+++ b/src/views/create/CreateEventPage.html
@@ -212,7 +212,7 @@
                       Event Page Form
                     </header>
                     <div class="panel-body">
-                      <form method="POST" action="/createevent/createEv" class="form-horizontal " method="get">
+                      <form method="POST" action="/createevent/createEv" class="form-horizontal">
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Name</label>
                           <div class="col-sm-10">
