--- a/src/views/page/EventPage.html
+++ b/src/views/page/EventPage.html
@@ -60,7 +60,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header ">
